--- a/frontend/src/pages/Listeinvoices.css
+++ b/frontend/src/pages/Listeinvoices.css
@@ -778,7 +778,7 @@ textarea.form-control {
   .add-item-btn {
     width: 100%;
     justify-content: center;
-  }
+  }~°
   
   .form-actions {
     flex-direction: column;
